--- a/index.html
+++ b/index.html
@@ -1,15 +1,10 @@
 ---
 layout: home
 search_exclude: true
-image: images/logo.png
+image: images/rfpt_logo.png
 ---
+![]({{site.baseurl}}/images//homepageImage_fr_CA.jpg "https://rfpt.sfpt.fr/")
 
-This site is built with [fastpages](https://github.com/fastai/fastpages), An easy to use blogging platform with extra features for Jupyter Notebooks.
-
-![]({{site.baseurl}}/images/diagram.png "https://github.com/fastai/fastpages")
-
-[fastpages](https://github.com/fastai/fastpages) automates the process of creating blog posts via GitHub Actions, so you don't have to fuss with conversion scripts.  A full list of features can be found on [GitHub](https://github.com/fastai/fastpages).  
-
-You can edit the `index.html` file to change this content.
+This is a blog of the [RFPT](https://rfpt.sfpt.fr/). It convers seminars, conferences and other events in the field of photogrammetry and remote sensing.
 
 # Posts
