--- a/index.html
+++ b/index.html
@@ -13,9 +13,9 @@
 <link rel="canonical" href="https://rfpt-sfpt.github.io/education/" />
 <meta property="og:url" content="https://rfpt-sfpt.github.io/education/" />
 <meta property="og:site_name" content="Revue française de photogrammétrie et de Télédétection" />
-<meta property="og:image" content="https://rfpt-sfpt.github.io/education/images/logo.png" />
+<meta property="og:image" content="https://rfpt-sfpt.github.io/education/images/rfpt_logo.png" />
 <script type="application/ld+json">
-{"description":"RFPT blog on seminars, conferences and other events in the field of photogrammetry and remote sensing","url":"https://rfpt-sfpt.github.io/education/","@type":"WebSite","headline":"Revue française de photogrammétrie et de Télédétection","image":"https://rfpt-sfpt.github.io/education/images/logo.png","name":"Revue française de photogrammétrie et de Télédétection","@context":"https://schema.org"}</script>
+{"description":"RFPT blog on seminars, conferences and other events in the field of photogrammetry and remote sensing","url":"https://rfpt-sfpt.github.io/education/","@type":"WebSite","headline":"Revue française de photogrammétrie et de Télédétection","image":"https://rfpt-sfpt.github.io/education/images/rfpt_logo.png","name":"Revue française de photogrammétrie et de Télédétection","@context":"https://schema.org"}</script>
 <!-- End Jekyll SEO tag -->
 <link rel="stylesheet" href="/education/assets/css/style.css"><link type="application/atom+xml" rel="alternate" href="https://rfpt-sfpt.github.io/education/feed.xml" title="Revue française de photogrammétrie et de Télédétection" /><link rel="shortcut icon" type="image/x-icon" href="/education/images/favicon.ico"><link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/Primer/15.2.0/primer.css" integrity="sha512-xTz2ys4coGAOz8vuV1NcQBkgVmKhsSEtjbqyMJbBHRplFuvKIUo6xhLHpAyPt9mfR6twHJgn9OgVLuqOvjeBhg==" crossorigin="anonymous" />
 <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.14.0/css/all.min.css" integrity="sha512-1PKOgIY59xJ8Co8+NE6FZ+LOAZKjy+KY8iq0G4B3CyeY6wYHN3yt9PW0XpSriVlkMXe40PTKnXrLnZ9+fkDaog==" crossorigin="anonymous" />
@@ -83,13 +83,9 @@ window.onload = wrap_img;
 </header>
 <main class="page-content" aria-label="Content">
       <div class="wrapper">
-        <div class="home"><p>This site is built with <a href="https://github.com/fastai/fastpages">fastpages</a>, An easy to use blogging platform with extra features for Jupyter Notebooks.</p>
+        <div class="home"><p><img src="/education/images//homepageImage_fr_CA.jpg" alt="" title="https://rfpt.sfpt.fr/" /></p>
 
-<p><img src="/education/images/diagram.png" alt="" title="https://github.com/fastai/fastpages" /></p>
-
-<p><a href="https://github.com/fastai/fastpages">fastpages</a> automates the process of creating blog posts via GitHub Actions, so you don’t have to fuss with conversion scripts.  A full list of features can be found on <a href="https://github.com/fastai/fastpages">GitHub</a>.</p>
-
-<p>You can edit the <code class="language-plaintext highlighter-rouge">index.html</code> file to change this content.</p>
+<p>This is a blog of the <a href="https://rfpt.sfpt.fr/">RFPT</a>. It convers seminars, conferences and other events in the field of photogrammetry and remote sensing.</p>
 
 <h1 id="posts">Posts</h1>
 
