--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@ image: images/rfpt_logo_v3.png
 ---
 ![]({{site.baseurl}}/images//homepageImage_fr_CA.jpg "https://rfpt.sfpt.fr/")
 
-This is a blog of the [RFPT](https://rfpt.sfpt.fr/). It convers seminars, conferences and other events in the field of photogrammetry and remote sensing.
+This is a blog of the [RFPT](https://rfpt.sfpt.fr/). It covers seminars, conferences and other events in the field of photogrammetry and remote sensing.
 
 {% include info.html text="Go to our [Research](https://rfpt-sfpt.github.io/blog) and [Tutorials](https://rfpt-sfpt.github.io/tutorials) blogs" %}
 
