deploy: 277e73b9dcc6ba83112b614c6756cbb1a7d30090

--- a/search/index.html
+++ b/search/index.html
@@ -14,7 +14,7 @@
 <meta property="og:url" content="https://rfpt-sfpt.github.io/education/search/" />
 <meta property="og:site_name" content="Revue française de photogrammétrie et de Télédétection" />
 <script type="application/ld+json">
-{"url":"https://rfpt-sfpt.github.io/education/search/","@type":"WebPage","headline":"Search","description":"RFPT blog on seminars, conferences and other events in the field of photogrammetry and remote sensing","@context":"https://schema.org"}</script>
+{"description":"RFPT blog on seminars, conferences and other events in the field of photogrammetry and remote sensing","url":"https://rfpt-sfpt.github.io/education/search/","@type":"WebPage","headline":"Search","@context":"https://schema.org"}</script>
 <!-- End Jekyll SEO tag -->
 <link rel="stylesheet" href="/education/assets/css/style.css"><link type="application/atom+xml" rel="alternate" href="https://rfpt-sfpt.github.io/education/feed.xml" title="Revue française de photogrammétrie et de Télédétection" /><link rel="shortcut icon" type="image/x-icon" href="/education/images/favicon.ico"><link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/Primer/15.2.0/primer.css" integrity="sha512-xTz2ys4coGAOz8vuV1NcQBkgVmKhsSEtjbqyMJbBHRplFuvKIUo6xhLHpAyPt9mfR6twHJgn9OgVLuqOvjeBhg==" crossorigin="anonymous" />
 <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.14.0/css/all.min.css" integrity="sha512-1PKOgIY59xJ8Co8+NE6FZ+LOAZKjy+KY8iq0G4B3CyeY6wYHN3yt9PW0XpSriVlkMXe40PTKnXrLnZ9+fkDaog==" crossorigin="anonymous" />
