--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@ image: images/rfpt_logo_v3.png
 ---
 ![]({{site.baseurl}}/images//homepageImage_fr_CA.jpg "https://rfpt.sfpt.fr/")
 
-This is a blog of the [RFPT](https://rfpt.sfpt.fr/). It covers seminars, conferences and other events in the field of photogrammetry and remote sensing.
+This is the _**Education blog**_ of the [RFPT](https://rfpt.sfpt.fr/). It covers seminars, conferences and other events in the field of photogrammetry and remote sensing. If you'd like to contribute, read this [post on article publishing](https://rfpt-sfpt.github.io/tutorials/tutorial/article%20writing/markdown/jupyter/docx/2021/05/10/Write-your-article.html).
 
 > Note: RFPT runs two other blogs on [Research](https://rfpt-sfpt.github.io/blog) and [Tutorials](https://rfpt-sfpt.github.io/tutorials).
 
